WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287772
[Cleanup] RenderOverflow does not need to be ref counted
https://bugs.webkit.org/show_bug.cgi?id=287772
Summary
[Cleanup] RenderOverflow does not need to be ref counted
alan
Reported
2025-02-16 05:54:13 PST
ssia
Attachments
Patch
(13.89 KB, patch)
2025-02-16 06:01 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.30 KB, patch)
2025-02-16 09:41 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(15.30 KB, patch)
2025-02-16 14:51 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-02-16 06:01:34 PST
Created
attachment 474239
[details]
Patch
alan
Comment 2
2025-02-16 09:41:19 PST
Created
attachment 474240
[details]
Patch
alan
Comment 3
2025-02-16 14:51:09 PST
Created
attachment 474242
[details]
[fast-cq]Patch
EWS
Comment 4
2025-02-17 05:21:50 PST
Committed
290479@main
(ed725d2892b1): <
https://commits.webkit.org/290479@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474242
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-02-17 05:22:16 PST
<
rdar://problem/144980150
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug