[Cleanup] RenderOverflow does not need to be ref counted https://bugs.webkit.org/show_bug.cgi?id=287772

Reviewed by Antti Koivisto.

RenderOverflow's usage follows the unique_ptr pattern.

* Source/WebCore/rendering/LegacyInlineFlowBox.cpp:
(WebCore::LegacyInlineFlowBox::computeOverflow):
(WebCore::LegacyInlineFlowBox::setVisualOverflow):
* Source/WebCore/rendering/LegacyInlineFlowBox.h:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::addLayoutOverflow):
(WebCore::RenderBox::addVisualOverflow):
(WebCore::RenderBox::clearOverflow):
* Source/WebCore/rendering/RenderBox.h:
(WebCore::RenderBox::hasRenderOverflow const):
* Source/WebCore/rendering/RenderBoxFragmentInfo.h:
(WebCore::RenderBoxFragmentInfo::createOverflow):
(WebCore::RenderBoxFragmentInfo::clearOverflow):
* Source/WebCore/rendering/RenderFragmentContainer.cpp:
(WebCore::RenderFragmentContainer::existingOverflowForBox const):
(WebCore::RenderFragmentContainer::overflowForBox const):
(WebCore::RenderFragmentContainer::addLayoutOverflowForBox):
(WebCore::RenderFragmentContainer::addVisualOverflowForBox):
(WebCore::RenderFragmentContainer::visualOverflowRectForBox const):
(WebCore::RenderFragmentContainer::layoutOverflowRectForBoxForPropagation):
(WebCore::RenderFragmentContainer::ensureOverflowForBox const): Deleted.
* Source/WebCore/rendering/RenderFragmentContainer.h:
* Source/WebCore/rendering/RenderOverflow.h:
(WebCore::RenderOverflow::setLayoutOverflow):
(WebCore::RenderOverflow::setVisualOverflow):

Canonical link: https://commits.webkit.org/290479@main