Source/WebCore/rendering/LegacyInlineFlowBox.cpp
@@ -259,9 +259,7 @@ void LegacyInlineFlowBox::computeOverflow(LayoutUnit lineTop, LayoutUnit lineBot
     if (knownToHaveNoOverflow())
         return;
 
-    if (m_overflow)
-        m_overflow = nullptr;
-
+    m_overflow = { };
     // Visual overflow just includes overflow for stuff we need to repaint ourselves. Self-painting layers are ignored.
     // Layout overflow is used to determine scrolling extent, so it still includes child layers and also factors in
     // transforms, relative positioning, etc.
@@ -290,7 +288,7 @@ void LegacyInlineFlowBox::setVisualOverflow(const LayoutRect& rect, LayoutUnit l
         return;
 
     if (!m_overflow)
-        m_overflow = adoptRef(new RenderOverflow(frameBox, frameBox));
+        m_overflow = makeUnique<RenderOverflow>(frameBox, frameBox);
 
     m_overflow->setVisualOverflow(rect);
 }
